# toml2nodeset

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  hk.pkl  mise.toml
.github/workflows/: ci.yml  commitlint.yml
.helix/: languages.toml
fake-model-compiler/: Cargo.toml
fake-model-compiler/src/: main.rs
schema/: opc-object-type.schema.json
src/: main.rs
templates/: modeldesign.xml
tests/: integration.rs
tests/cmd/: cli.toml
tests/cmd/cli.in/testns/testmodel/: conveyor_belt.toml  motor.toml  testmodelModel.csv  version.txt
tests/cmd/cli.out/testns/testmodel/: model_compiler_out.txt  testmodel.NodeSet2.xml  testmodelModel.xml
