[package]
name = "toml2nodeset"
version = "1.0.0"
edition.workspace = true
description = "Turn TOML description of OPC-UA model to nodeset files"
publish.workspace = true

[workspace]
members = ["fake-model-compiler"]

[workspace.package]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
duct = "1.1.1"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
urn = "0.7.0"

[dev-dependencies]
escargot = "0.5.15"
trycmd = "1.2.0"
