[package]
name = "toml2nodeset"
version = "1.0.0"
edition = "2024"
description = "Turn TOML description of OPC-UA model to nodeset files"
publish = false

[dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
duct = "1.1.1"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
urn = "0.7.0"

[dev-dependencies]
trycmd = "1.2.0"
